<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
    http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

	<modelVersion>4.0.0</modelVersion>
	<groupId>ch.opentrainingcenter</groupId>
	<artifactId>ch.opentrainingcenter</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<tycho.version>0.22.0</tycho.version>
		<jacoco.version>0.7.1.201405082137</jacoco.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<luna-repo.url>http://download.eclipse.org/releases/luna</luna-repo.url>
	</properties>

	<repositories>
		<repository>
			<id>luna</id>
			<url>${luna-repo.url}</url>
			<layout>p2</layout>
		</repository>
	</repositories>

	<profiles>
		<profile>
			<id>build-individual-bundles</id>
			<repositories>
				<repository>
					<id>eclipse-p2-repo</id>
					<url>${eclipse-p2-repo.url}</url>
					<layout>p2</layout>
				</repository>
			</repositories>
		</profile>
	</profiles>

	<modules>
		<!-- Client -->
		<module>ch.opentrainingcenter.client.core</module>
		<module>ch.opentrainingcenter.client.core.product</module>

		<!-- common -->
		<module>ch.opentrainingcenter.transfer</module>
		<module>ch.opentrainingcenter.common</module>
		<module>ch.opentrainingcenter.i18n</module>

		<!-- Server -->
		<module>ch.opentrainingcenter.server.service</module>
		<module>ch.opentrainingcenter.server.integration</module>
		<module>ch.opentrainingcenter.server.db.h2</module>

		<!-- Target Definition -->
		<module>ch.opentrainingcenter.build.targetdefinition</module>


		<!-- Tests -->
		<module>ch.opentrainingcenter.common.tests</module>
		<module>ch.opentrainingcenter.server.service.tests</module>
		<module>ch.opentrainingcenter.server.integration.tests</module>
		<module>ch.opentrainingcenter.server.db.h2.tests</module>

		<!-- 3th Party -->
		<module>org.hibernate</module>
		<module>jodatime</module>
		<module>logging</module>
		<module>h2_lib</module>

		<!-- 3th Party Tests -->
		<module>junit</module>
		<module>mockito</module>
	</modules>



	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<useUIHarness>false</useUIHarness>
					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=256M</argLine>
					<includes>
						<include>**/*Tests.*</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>2.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<forkCount>5</forkCount>
					<providerHint>junit</providerHint>
					<reuseForks>true</reuseForks>
					<argLine>-Dnet.sf.ehcache.disabled=true</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>

				<configuration>
					<resolver>p2</resolver>
					<!-- This defines the target definition file <target> <artifact> <groupId>ch.opentrainingcenter</groupId> 
						<artifactId>ch.opentrainingcenter.build.targetdefinition</artifactId> <version>1.0.0-SNAPSHOT</version> 
						</artifact> </target> -->
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>